correct horizontal scroll

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: rgb(197, 197, 197);
 }
 
 a {
@@ -17,4 +18,16 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+body::-webkit-scrollbar {
+  width: 1vw;
+}
+ 
+body::-webkit-scrollbar-track {
+  background-color: rgb(248, 248, 248);
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: rgb(185, 185, 185);
 }
